--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-   - assets/particle.png
-  #  - images/a_dot_ham.jpeg
+    - assets/particle_match_head.png
+    - assets/particle_blob.png
+    - assets/particle_fuzzy_circle.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
